@@ -1,5 +1,8 @@
 2007-06-20  Marcus Brinkmann  <marcus@g10code.de>
 
+	* nsis-xgettext.awk, nsis-msgfmt.c: Convert newlines properly.
+	* de.po: Use proper newlines.
+
 	* Makevars, LINGUAS, nsis-xgettext.sh, nsis-xgettext.awk,
 	nsis-msgfmt.c, Rules-nsis, de.po, README.nsis: New files.
 
